saves/test/demo_full_20240802_193545/gshare/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp gshare_tb.v gshare.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
gshare_tb.v:176: $finish called at 700000 (1ps)

iverilog cmd 2 error:

